--- a/day_6.html
+++ b/day_6.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World </h1>
-    <h2>First Try</h2>
+    <div>
+        <h1>Hello World </h1>
+        <h2>First Try</h2>
+    </div>
+    <input type="button" value="Submit">
 </body>
 </html>
