--- a/day_6.html
+++ b/day_6.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+        $("body").append($("<h2>")).html("New H2 Tag appended using jQuery.")
+        });
+    </script>
 </head>
 <body>
     <div>
